--- a/_posts/2018-07-17-test.md
+++ b/_posts/2018-07-17-test.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title:  "Moon Jekyll Theme"
-date:   2016-04-06
+title:  "test"
+date:   2018-07-17
 excerpt: "Minimal, one column Jekyll theme for your blog."
 project: true
 tag:
@@ -10,5 +10,5 @@ comments: true
 ---
 
 
-### test
+### testgi
 *아 설정 귀찮다. 흑흑*
