--- a/_posts/2018-07-17-test.md
+++ b/_posts/2018-07-17-test.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "test"
 date:   2018-07-17
-excerpt: "Minimal, one column Jekyll theme for your blog."
+excerpt: "testPage"
 project: true
 tag:
 - test
@@ -10,5 +10,5 @@ comments: true
 ---
 
 
-### testgi
+### test
 *아 설정 귀찮다. 흑흑*
