--- a/_posts/2018-07-17-test.md
+++ b/_posts/2018-07-17-test.md
@@ -1,9 +1,9 @@
 ---
-layout:post
+layout: post
 title:  "test"
 date:   2018-07-17
 excerpt: "testPage"
-project: true
+posts: true
 tag:
 - test
 comments: true
