--- a/_posts/2018-07-17-(1)-변수-.md
+++ b/_posts/2018-07-17-(1)-변수-.md
@@ -14,8 +14,8 @@ comments: true
 # 변수 선언 방법
 코틀린의 변수 선언은 타입 추론 방식을 따른다.
 | 변수 | 상수 |
-|-------------|--------------|
-|  var 변수명  |  val 변수명   |
+|--------|--------|
+|  var 변수명 |   val 상수명    |
 
 코드로 예시를 들어보겠다.	
 a라는 변수와 b라는 상수를 선언해보겠다.
