--- a/_posts/2018-07-17-(1)-변수-.md
+++ b/_posts/2018-07-17-(1)-변수-.md
@@ -13,11 +13,9 @@ comments: true
 
 # 변수 선언 방법
 코틀린의 변수 선언은 타입 추론 방식을 따른다.
-|    변수     |      상수      |
-|------------|----------------|
-|  var 변수명 |   val 상수명    |
+타입 추론 방식이 무엇이냐면 타입을 명시하는 것이 아닌 컴파일러가 알아서 찾아주는 것이다.
 
-코드로 예시를 들어보겠다.	
+무슨 뜻인지 햇갈릴테니 코드로 예시를 들어보겠다.
 a라는 변수와 b라는 상수를 선언해보겠다.
 
 ~~~
