--- a/_posts/2018-07-22-텐서플로우 설치(윈도우10)-.md
+++ b/_posts/2018-07-22-텐서플로우 설치(윈도우10)-.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "텐서플로우 설치"
 date:   2018-07-22
-export: "텐서플로우를 설치하자."
+excerpt: "텐서플로우를 설치하자."
 post: true
 tag:
 - tensorflow
