--- a/_posts/2018-07-22-텐서플로우 설치(윈도우10)-.md
+++ b/_posts/2018-07-22-텐서플로우 설치(윈도우10)-.md
@@ -18,8 +18,8 @@ comments: true
 
 ### 1. 아나콘다 설치
 텐서플로우는 파이썬 모듈이므로 파이썬을 지원하는 아나콘다를 설치해야 한다. 아나콘다는 여러 파이썬 패키지를 모아놓은 프로그램이다.
-
-[아나콘다 공식 다운로드 사이트](https://www.anaconda.com/download/)z 만들 수 있기에 프로젝트를 진행하기도 용이하다.
+![test]({{"/assets/postImage/2018-07-22-텐서플로우 설치(윈도우10)/20180723_214305.png"}})
+[아나콘다 공식 다운로드 사이트](https://www.anaconda.com/download/) 만들 수 있기에 프로젝트를 진행하기도 용이하다.
 뭐 필자의 설정을 굳이 알 필요는 없겠지만 설정은 다음처럼 설정해였다.
 
 뭐, 보면 알겠지만 디폴트값으로 설치하였다.
