--- a/_posts/2018-07-22-텐서플로우 설치(윈도우10)-.md
+++ b/_posts/2018-07-22-텐서플로우 설치(윈도우10)-.md
@@ -18,19 +18,23 @@ comments: true
 
 ### 1. 아나콘다 설치
 텐서플로우는 파이썬 모듈이므로 파이썬을 지원하는 아나콘다를 설치해야 한다. 아나콘다는 여러 파이썬 패키지를 모아놓은 프로그램이다.
-![test]({{"/assets/postImage/2018-07-22-텐서플로우 설치(윈도우10)/20180723_214305.png"}})
+![아나콘다 다운로드]({{"/assets/postImage/2018-07-22-텐서플로우 설치(윈도우10)/20180723_214305.png" | absolute_url}})
+
 [아나콘다 공식 다운로드 사이트](https://www.anaconda.com/download/) 만들 수 있기에 프로젝트를 진행하기도 용이하다.
 뭐 필자의 설정을 굳이 알 필요는 없겠지만 설정은 다음처럼 설정해였다.
-
+다.
+![설정1]({{"/assets/postImage/2018-07-22-텐서플로우 설치(윈도우10)/20180723_225217.png" | absolute_url}})
+![설정2]({{"/assets/postImage/2018-07-22-텐서플로우 설치(윈도우10)/20180723_230106.png" | absolute_url}})
+![설정3]({{"/assets/postImage/2018-07-22-텐서플로우 설치(윈도우10)/20180723_230128.png" | absolute_url}})
 뭐, 보면 알겠지만 디폴트값으로 설치하였다.
 
 그리고 설치 후에 이런 화면이 나올텐데 건너띄어도 상관없다. VSCODE를 설치한다는 것으로 반드시 필요한건 아니니 굳이 할 필요는 없다.
-
+![vscode]({{"/assets/postImage/2018-07-22-텐서플로우 설치(윈도우10)/20180723_231038.png" | absolute_url}})
 이 과정을 거치면 아나콘다 cmd가 있을 것이다.
-
+![아나콘다cmd]({{"/assets/postImage/2018-07-22-텐서플로우 설치(윈도우10)/20180723_231255.png" | absolute_url}})
 해당 프로그램을 실행하면 다음과 같은 화면이 나올 것이다.
 그리고 conda info를 입력하자
-
+![아나콘다cmd]({{"/assets/postImage/2018-07-22-텐서플로우 설치(윈도우10)/20180723_232558.png" | absolute_url}})
 이러한 화면이 나오면 아나콘다가 제대로 설치된 것이다.
 
 ### 2. 아나콘다 가상환경을 만든다.
