--- a/_posts/2018-07-22-텐서플로우 설치(윈도우10)-.md
+++ b/_posts/2018-07-22-텐서플로우 설치(윈도우10)-.md
@@ -34,7 +34,7 @@ comments: true
 ![아나콘다cmd]({{"/assets/postImage/2018-07-22-텐서플로우 설치(윈도우10)/20180723_231255.png" | absolute_url}})
 해당 프로그램을 실행하면 다음과 같은 화면이 나올 것이다.
 그리고 conda info를 입력하자
-![아나콘다cmd]({{"/assets/postImage/2018-07-22-텐서플로우 설치(윈도우10)/20180723_232558.png" | absolute_url}})
+![아나콘다테스트]({{"/assets/postImage/2018-07-22-텐서플로우 설치(윈도우10)/20180723_232558.png" | absolute_url}})
 이러한 화면이 나오면 아나콘다가 제대로 설치된 것이다.
 
 ### 2. 아나콘다 가상환경을 만든다.
@@ -42,18 +42,20 @@ comments: true
 먼저 아나콘다를 업데이트해서 최신 환경을 구성하자
 
  ```command : conda update -n base conda```
-
+![아나콘다버전업]({{"/assets/postImage/2018-07-22-텐서플로우 설치(윈도우10)/20180723_233221.png" | absolute_url}})
 master인 base의 가상환경을 업데이트 한다는 의미이다.
-자, 그리고 텐선플로우를 위한 가상 환경을 만들자
+자, 그리고 텐서플로우를 위한 가상 환경을 만들자
 
  ```command : conda --name [원하는 가상환경 이름]```
-
-이러면 conda에 기본으로 설정된 파이선 버전으로 가상 환경이 생성되는데 다른 버전을 원하면 뒤에 이 옵션을 추가하면 된다.
+![가상환경 생성]({{"/assets/postImage/2018-07-22-텐서플로우 설치(윈도우10)/20180724_025332.png" | absolute_url}})
+--name옵션 대신 -n이라고 해도 동작한다(똑같은 뜻이다). 이러면 conda에 기본으로 설정된 파이선 버전으로 가상 환경이 생성되는데 다른 버전을 원하면 뒤에 이 옵션을 추가하면 된다.
 
 ```python=(원하는 버전)```
+
 가상 환경이 만들어졌나 확인해보자
 
  ```command : conda info --env```
+![가상환경 생성]({{"/assets/postImage/2018-07-22-텐서플로우 설치(윈도우10)/20180723_234408.png" | absolute_url}})
 
 이제 만든 가상환경을 실행시켜보자
 
