--- a/_posts/2018-07-22-텐서플로우 설치(윈도우10)-.md
+++ b/_posts/2018-07-22-텐서플로우 설치(윈도우10)-.md
@@ -55,11 +55,12 @@ master인 base의 가상환경을 업데이트 한다는 의미이다.
 가상 환경이 만들어졌나 확인해보자
 
  ```command : conda info --env```
-![가상환경 생성]({{"/assets/postImage/2018-07-22-텐서플로우 설치(윈도우10)/20180723_234408.png" | absolute_url}})
+![가상환경 생성]({{"/assets/postImage/2018-07-22-텐서플로우 설치(윈도우10)/tenxorflowEnv.png" | absolute_url}})
 
 이제 만든 가상환경을 실행시켜보자
 
  ```command : (conda) activate [만든 가상환경의 이름]```
+![가상환경 시작]({{"/assets/postImage/2018-07-22-텐서플로우 설치(윈도우10)/condaActivate.png" | absolute_url}})
 
 실행되었음을 확인할 수 있다.
 
@@ -68,6 +69,7 @@ master인 base의 가상환경을 업데이트 한다는 의미이다.
 이제 설치하자
 
 ```command : pip install tensorflow```
+![텐서플로우 설치]({{"/assets/postImage/2018-07-22-텐서플로우 설치(윈도우10)/20180724_032303.png" | absolute_url}})
 gpu가속을 이용해 빠른 속도를 내고 싶다면 다음 명령어로 텐선플로우를 설치해야 한다.
 
 ```command : pip install tensorflow-gpu```
@@ -77,10 +79,13 @@ gpu가속을 이용해 빠른 속도를 내고 싶다면 다음 명령어로 텐
 다른 블로그에 보면 버전 여러 옵션들을 추가하면서 넣는 것을 보았을 것이다. 옵션들이 붙어있는 이유는 텐서플로우 공식사이트에서 설명하는 설치방법에 적혀있기 대문이다.
 텐서플로우 공식 사이트를 보면 해당 내용이 적혀있다.
 https://www.tensorflow.org/install/install_windows
+원랜 메뉴얼보고 하는게 가장 좋은 방법이지만 필자의 경험을 공유하는 것이 목적이다. ==이런 방법도 된다== 라는걸 알아두었으면 한다.
+
 자, 이제 설치가 되었는지 확인해보자.
 
 ```command : pip list```
-해당 명령어를 타이핑하면 해당 가상환경에 어떤 모듈들이 설치되어 있는지를 출력해준다.
+해당 명령어를 타이핑하면 해당 가상환경에 어떤 모듈들이 설치되어 있는지를 출력해준다. 모듈 리스트 중에 tensorflow가 있으면 설치가 된 것이다.
+![pip리스트 출력]({{"/assets/postImage/2018-07-22-텐서플로우 설치(윈도우10)/20180724_033302.png" | absolute_url}})
 
 이제 텐서플로우를 테스트를 해보자.
 ~~~
@@ -100,13 +105,17 @@ print(sess.run(hello))
 sess.close()
 
 ~~~
+![코드 실행 결과]({{"/assets/postImage/2018-07-22-텐서플로우 설치(윈도우10)/20180724_035204.png" | absolute_url}})
+
 잘된다.
 위의 os코드는 최신 cpu에서 신규 명령어를 지원하니 바젤이라는 빌드 시스템을 사용해서 빌드해라. 라는 뜻이다. 근데 윈도우에서 직접 빌드하긴 어려우므로 윈도우상에서 텐서플로우의 로그 레벨을 낮추는 것이다. 그래서 텐서플로우 레벨을 낮추는 것이다. 코드를 이용하는 방법 말고 기본 설정으로도 바꿀 수 있다. 해당 내용은 [여기를 참고하길 바란다.](http://effortmakesme.tistory.com/126)
 근데 ==warring이 뜨는데 잘되는거냐!== 라고 할 수 있는데 저건 h5py의 에러이다. 버전의 차이에 따라 생기는 문제이고 ==h5py를 업데이트하면 해결되는 문제이다== .
-그리고 문자열에 b가 출력되는건 파이선의 버전의 차이 때문에 발생하는 것이라고 한다.
-h5py를 업데이트하면 해결된다.
+
+![h5py업데이트]({{"/assets/postImage/2018-07-22-텐서플로우 설치(윈도우10)/20180724_040821.png" | absolute_url}})
 
 짜잔
+
+그리고 문자열에 b가 출력되는건 저건 ==자료형이 바이트다==라고 하는 파이썬 문법이라고 한다.
 
 ### 4. 텐서플로우를 개발툴로 사용하기
 이제 마지막이다.
@@ -115,12 +124,16 @@ h5py를 업데이트하면 해결된다.
 프로그램을 개발할 때 커맨드 라인에서 한줄한줄 치거나 메모장으로 개발하면 비효율적이지 않은가?
 이제 개발툴로 옮기는 방법을 설명하겠다.
 필자는 PyCharm을 사용하겠다.
+
 1. ctrl+alt+s를 누른다.(File의 setting창으로 이동한다.)
 2. 톱니바퀴 모양을 누르고 add를 클릭한다.
 3. Existing environment를 클릭하고 아나콘다를 설치한 위치로 이동한다.(conda info로 확인할 수 있다.)
+![텐서플로우 개발툴 설정 완료]({{"/assets/postImage/2018-07-22-텐서플로우 설치(윈도우10)/20180724_035642.png" | absolute_url}})
 4. 확인을 눌러서 해당 사항을 저장한다.
-이제 테스트를 해보자.
+![텐서플로우 개발툴 설정 완료]({{"/assets/postImage/2018-07-22-텐서플로우 설치(윈도우10)/20180724_035656.png" | absolute_url}})
 
+이제 테스트를 해보자.
+![PyCharm테스트]({{"/assets/postImage/2018-07-22-텐서플로우 설치(윈도우10)/20180724_035350.png" | absolute_url}})
 conda에서 테스트한 코드와 같은 코드이다.
 
-하와와..끝났다.
+#끝
