--- a/_posts/2018-08-14-(2)-클래스-.md
+++ b/_posts/2018-08-14-(2)-클래스-.md
@@ -299,11 +299,13 @@ fun main(args : Array<String>){
 
 해당 코드는 객체 초기화를 설명하기 위한 코드이다. SoChang이란 클래스는 Sorin이라는 클래스의 자식이다. Sorin클래스에선 Level이라는 변수를 가지고 있다.
 이 코드를 실행시켜보자
-![/asset/postImage/kotlin/"2018-07-17-2. 클래스"/ExampleKotlinResult.png](ExampeKotlin실행 결과)
+
+![ExampeKotlin실행 결과]({{"/assets/postImage/kotlin/"2018-07-17-2. 클래스"/ExampleKotlinResult.png" | absolute_url}})
+
 초기화 과정을 보면 init가 생성자보다 먼저 실행되는 것을 알 수 있다. 그럼 init블록은 자바의 인스턴스 블록에 작성되는 것인가? 답은 아니다. 자바 코드로 디컴파일을 해서 이 이유를 알아보자.
 
 디컴파일을 하면 다음과 같은 코드가 작성된다.
-![/asset/postImage/kotlin/"2018-07-17-2. 클래스"/initBlock.png](디컴파일 코드)
+![디컴파일 코드]({{ "/assets/postImage/kotlin/"2018-07-17-2. 클래스"/initBlock.png" | absolute_url}})
 
 코드를 보면 init블록의 내용이 ==생성자에 작성==되어 있음을 알 수 있다. 따라서 ==init블록의 내용은 인스턴스 블록이 아닌 생성자에 작성된다.==
 마지막으로 설명을 안한 것이 있다.
@@ -315,7 +317,9 @@ var a="hawawa"
 this.b="wai"
 ```
 
-a와 b는 값을 초기화 한다는 공통점이 있다. 그러나 a는 직접적으로 a라는 값에 "hawawa"를 넣는 것이고 b는 setter을 이용해 b값을 수정한다. 
+a와 b는 값을 초기화 한다는 공통점이 있다. 그러나 a는 직접적으로 a라는 값에 "hawawa"를 넣는 것이고 b는 setter을 이용해 b값을 수정한다.
 코틀린에는 변수를 선언할 때마다 getter,setter이 자동으로 선언되고 변수의 값을 넣거나 가져올 때 자동으로 getter,setter을 가져오도록 설계되어있다. 이를 알기 위해 ExampleKotlin을 디컴파일 해보겠다.
-![/asset/postImage/kotlin/"2018-07-17-2. 클래스"/setterAndGetter.png](ExampleKotlin디컴파일)
+
+![ExampleKotlin디컴파일({{ "/asset/postImage/kotlin/"2018-07-17-2. 클래스"/setterAndGetter.png" | absolute_url }})
+
 자바 코드엔 없던 get와 set이 있다. 코틀린의 특징 중 하나인데 변수를 선언하면 해당 변수를 get, set으로 값을 불러오거나 가져올 수 있도록 컴파일을 한다. 또한 get과 set은 기본적으로 public이기 때문에 부모 클래스의 변수값을 가져오거나 수정하기 때문에 open으로 해당 변수를 열어줄 필요가 없다.
