--- a/_posts/2018-08-14-(2)-클래스-.md
+++ b/_posts/2018-08-14-(2)-클래스-.md
@@ -320,6 +320,6 @@ this.b="wai"
 a와 b는 값을 초기화 한다는 공통점이 있다. 그러나 a는 직접적으로 a라는 값에 "hawawa"를 넣는 것이고 b는 setter을 이용해 b값을 수정한다.
 코틀린에는 변수를 선언할 때마다 getter,setter이 자동으로 선언되고 변수의 값을 넣거나 가져올 때 자동으로 getter,setter을 가져오도록 설계되어있다. 이를 알기 위해 ExampleKotlin을 디컴파일 해보겠다.
 
-![ExampleKotlin디컴파일({{ "/asset/postImage/kotlin/"2018-07-17-2. 클래스"/setterAndGetter.png" | absolute_url }})
+![ExampleKotlin디컴파일]({{ "/asset/postImage/kotlin/"2018-07-17-2. 클래스"/setterAndGetter.png" | absolute_url }})
 
 자바 코드엔 없던 get와 set이 있다. 코틀린의 특징 중 하나인데 변수를 선언하면 해당 변수를 get, set으로 값을 불러오거나 가져올 수 있도록 컴파일을 한다. 또한 get과 set은 기본적으로 public이기 때문에 부모 클래스의 변수값을 가져오거나 수정하기 때문에 open으로 해당 변수를 열어줄 필요가 없다.
