--- a/_posts/2018-08-14-(2)-클래스-.md
+++ b/_posts/2018-08-14-(2)-클래스-.md
@@ -299,7 +299,7 @@ fun main(args : Array<String>){
 
 해당 코드는 객체 초기화를 설명하기 위한 코드이다. SoChang이란 클래스는 Sorin이라는 클래스의 자식이다. Sorin클래스에선 Level이라는 변수를 가지고 있다.
 이 코드를 실행시켜보자
-![ExampeKotlin실행 결과]({{"/assets/postImage/2018-07-17-2. 클래스/ExampleKotlinResult.png | absolute_url}})
+![ExampeKotlin실행 결과]({{"/assets/postImage/2018-07-17-2. 클래스/ExampleKotlinResult.png" | absolute_url}})
 초기화 과정을 보면 init가 생성자보다 먼저 실행되는 것을 알 수 있다. 그럼 init블록은 자바의 인스턴스 블록에 작성되는 것인가? 답은 아니다. 자바 코드로 디컴파일을 해서 이 이유를 알아보자.
 
 디컴파일을 하면 다음과 같은 코드가 작성된다.
