--- a/_posts/2018-07-17-(1)-변수-.md
+++ b/_posts/2018-07-17-(1)-변수-.md
@@ -17,7 +17,7 @@ comments: true
 무슨 뜻인지 햇갈릴테니 코드로 예시를 들어보겠다.
 a라는 변수와 b라는 상수를 선언해보겠다.
 
-~~~
+~~~kotlin
 fun test(){
    var a="wahaha"
    val b="wai"
@@ -28,7 +28,7 @@ fun test(){
 컴파일러가 해당 변수의 타입을 추론하는 것이다.
 그럼 타입 추론이 아닌 명시적으로 타입을 지정하는 방식은 어떻게 할까?
 방식은 다음과 같다.
-~~~
+~~~kotlin
 fun test(){
 	var a : String="wahaha"
     val b : String="wai"
