--- a/_posts/2018-12-20-안드로이드_앱_취약점_점검_(1)_액티비티.md
+++ b/_posts/2018-12-20-안드로이드_앱_취약점_점검_(1)_액티비티.md
@@ -3,11 +3,13 @@ layout: post
 title: "안드로이드 앱 취약점 : 액티비티"
 date: 2018-12-20
 excerpt: 안드로이드 앱 취약점
+url: "https://lifeoftiredness.github.io"
+baseurl: "posts"
 tag:
  - android
  - Activity vulnerability
 comments: true
-published : false
+published : true
 ---
 
 # 액티비티
@@ -23,11 +25,15 @@ published : false
 
 
 **실습 환경**
-![안드로이드 버전]({{"/assets/postImage/2018-12-20-안드로이드_앱_취약점_점검)/android_version.png" | absolute_url}})
+![안드로이드 버전](/assets/postImage/2018-12-20-안드로이드_앱_취약점_점검/android_version.png)
 
 
 ### 실습1. activity manager
-액티비티 매니저를 이용해 권한없는 앱을 실행하는 방법이다. 액티비티 매니저는 adb에 기본적으로 내장되어 있는 기능이고
+액티비티 매니저를 이용해 권한없는 앱을 실행하는 방법이다. 액티비티 매니저는 액티비티 시작, 프로세스 강제 중단, 인텐트 브로드캐스트, 기기 화면 속성 수정 등의 다양한 작업을 할 수 있다.
+am을 이용해 액티비티를 실행시키는 명령어는 다음과 같다
+```console
+adb shell am start -a 패키지명.액티비티명(시작시킬)
+```
 
 ### 실습2. drozer
 
