--- a/_posts/2018-12-20-안드로이드_앱_취약점_점검_(1)_액티비티.md
+++ b/_posts/2018-12-20-안드로이드_앱_취약점_점검_(1)_액티비티.md
@@ -3,13 +3,11 @@ layout: post
 title: "안드로이드 앱 취약점 : 액티비티"
 date: 2018-12-20
 excerpt: 안드로이드 앱 취약점
-url: "https://lifeoftiredness.github.io"
-baseurl: "posts"
 tag:
  - android
  - Activity vulnerability
 comments: true
-published : true
+published : false
 ---
 
 # 액티비티
@@ -21,18 +19,18 @@ published : true
 액티비티에서 나타나는 취약점은 접근할 수 없는 액티비티에 접근을 하여서 정보를 수정 및 변조를 진행시킬 수 있다.
 
 ## 실습하기 이전에
-액티비티 취약점을 실습하기 위해 InseureBank앱을 사용하기로 한다. ![Android-InsecureBankv2](https://github.com/dineshshetty/Android-InsecureBankv2)에 있는 소스를 이용하였다. **Thank you InseureBank!!!**
+액티비티 취약점을 실습하기 위해 InseureBank앱을 사용하기로 한다. [Android-InsecureBankv2](https://github.com/dineshshetty/Android-InsecureBankv2)에 있는 소스를 이용하였다. **Thank you InseureBank!!!**
 
 
 **실습 환경**
-![안드로이드 버전](/assets/postImage/2018-12-20-안드로이드_앱_취약점_점검/android_version.png)
+![안드로이드 버전]({{"/assets/postImage/2018-12-20-안드로이드_앱_취약점_점검/android_version.png" | relative_url}})
 
 
 ### 실습1. activity manager
 액티비티 매니저를 이용해 권한없는 앱을 실행하는 방법이다. 액티비티 매니저는 액티비티 시작, 프로세스 강제 중단, 인텐트 브로드캐스트, 기기 화면 속성 수정 등의 다양한 작업을 할 수 있다.
 am을 이용해 액티비티를 실행시키는 명령어는 다음과 같다
-```console
-adb shell am start -a 패키지명.액티비티명(시작시킬)
+```bat
+adb shell am start -a 패키지명.액티비티명
 ```
 
 ### 실습2. drozer
