--- a/_posts/2018-12-20-안드로이드_앱_취약점_점검_(1)_액티비티.md
+++ b/_posts/2018-12-20-안드로이드_앱_취약점_점검_(1)_액티비티.md
@@ -7,7 +7,7 @@ tag:
  - android
  - Activity vulnerability
 comments: true
-published : false
+published : True
 ---
 
 # 액티비티
@@ -21,22 +21,64 @@ published : false
 ## 실습하기 이전에
 액티비티 취약점을 실습하기 위해 InseureBank앱을 사용하기로 한다. [Android-InsecureBankv2](https://github.com/dineshshetty/Android-InsecureBankv2)에 있는 소스를 이용하였다. **Thank you InseureBank!!!**
 
+classyShark를 이용해 앱의 패키지경로 및 액티비티명을 알아내는 것이 초석이다.
+![activity]({{"/assets/postImage/2018-12-20-안드로이드_앱_취약점_점검/check_package_Activity.png" | relative_url}})
 
 **실습 환경**
 ![안드로이드 버전]({{"/assets/postImage/2018-12-20-안드로이드_앱_취약점_점검/android_version.png" | relative_url}})
-
+배치파일
+```bat
+@echo os버전
+@echo OFF
+adb shell getprop ro.build.version.release
+@echo 모델명
+@echo OFF
+adb shell getprop ro.product.model
+@echo 시리얼 넘버
+@echo OFF
+adb get-serialno
+@echo sdk버전
+@echo OFF
+adb shell getprop ro.build.version.sdk
+```
 
 ### 실습1. activity manager
 액티비티 매니저를 이용해 권한없는 앱을 실행하는 방법이다. 액티비티 매니저는 액티비티 시작, 프로세스 강제 중단, 인텐트 브로드캐스트, 기기 화면 속성 수정 등의 다양한 작업을 할 수 있다.
 am을 이용해 액티비티를 실행시키는 명령어는 다음과 같다
 ```bat
-adb shell am start -a 패키지명.액티비티명
+adb shell am start -a 패키지.액티비티
 ```
 
 ### 실습2. drozer
+두번째 방법은 드로저를 이용하는 방법이다.
+drozer은 안드로이드 동적 분석으로 사용되는 툴로서 앱에서 공격할 수 있는 곳을 체크하고 실행시킬 수 있다. 또한 프록시까지 가능한 매우 좋은 툴이다. 드로저 설치는 예전 블로그를 봐라
+```bat
+#앱 취약점 점검
+run app.package.attacksurface com.android.insecurebankv2
+#취약한 액티비티 리스트
+run app.activity.info -a "com.android.insecurebankv2"
+```
 
+![앱 취약점 점검]({{/assets/postImage/2018-12-20-안드로이드_앱_취약점_점검/drozer_check_attacksurface.png | relative_url}})
 
-### 실습3. 외부에서 앱 제작
+![취약한 액티비티]({{/assets/postImage/2018-12-20-안드로이드_앱_취약점_점검/drozer_check_activity.png | relative_url}})
+
+액티비티 실행
+
+```bat
+run app.activity.start --component com.android.inescurebankv2 com.android.insecurebankv2.ChangePassword
+```
+
+![액티비티 실행]({{/assets/postImage/2018-12-20-안드로이드_앱_취약점_점검/Screenshot_1545402785.png | relative_url}})
+
 
 ## 취약점 진단
-액티비티의 취약점을 진단하기 위해서는 다음과
+매니페스트 파일을 보고 액티비티의 exported옵션이 true인 것인지를 확인한다. exported 옵션은 외부에서 앱을 실행시키는 것을 허용하는 옵션이다.
+![취약점 점검]({{"/assets/postImage/2018-12-20-안드로이드_앱_취약점_점검/activity_vulearability.png" | relative_url}})
+루팅 체크여부도 취약점 진단에 포함되어야 한다. exported옵션이 false이어도 액티비티 매니저를 이용하면 exported옵션을 무시하노 액티비티를 실행시킨다.
+![not_rooting]({{/assets/postImage/2018-12-20-안드로이드_앱_취약점_점검/non_rooting_device.png | relative_url}})
+exported옵션을 false로 한 앱을 액티비티 매니저로 실행시키면 false가 발생하지만 같은 앱을 루팅된 디바이스에서 액티비티 매니저로 액티비티 실행을 명령하면 실행이 된다.
+![rooting]({{/assets/postImage/2018-12-20-안드로이드_앱_취약점_점검/rooting_devices.png | relative_url}})
+
+
+앱 취약점을 공부를 해보면 루팅
