--- a/_posts/2018-12-20-안드로이드_앱_취약점_점검_(1)_액티비티.md
+++ b/_posts/2018-12-20-안드로이드_앱_취약점_점검_(1)_액티비티.md
@@ -7,11 +7,7 @@ tag:
  - android
  - Activity vulnerability
 comments: true
-<<<<<<< HEAD
 published : true
-=======
-published : True
->>>>>>> 454fa904f7460c4ea60b5f48724f606583abffd2
 ---
 
 # 액티비티
@@ -26,7 +22,8 @@ published : True
 액티비티 취약점을 실습하기 위해 InseureBank앱을 사용하기로 한다. [Android-InsecureBankv2](https://github.com/dineshshetty/Android-InsecureBankv2)에 있는 소스를 이용하였다. **Thank you InseureBank!!!**
 
 classyShark를 이용해 앱의 패키지경로 및 액티비티명을 알아내는 것이 초석이다.
-![activity]({{"/assets/postImage/2018-12-20-안드로이드_앱_취약점_점검/check_package_Activity.png" | relative_url}})
+![activity]({{"/assets/postImage/2018-12-20-안드로이드_앱_취약점_점검/check_package_Activity.png" | absolute_url}})
+
 
 **실습 환경**
 ![안드로이드 버전]({{"/assets/postImage/2018-12-20-안드로이드_앱_취약점_점검/android_version.png" | relative_url}})
