--- a/_posts/2018-12-20-안드로이드_앱_취약점_점검_(1)_액티비티.md
+++ b/_posts/2018-12-20-안드로이드_앱_취약점_점검_(1)_액티비티.md
@@ -23,6 +23,7 @@ published : true
 
 classyShark를 이용해 앱의 패키지경로 및 액티비티명을 알아내는 것이 초석이다.
 ![activity]({{"/assets/postImage/2018-12-20-안드로이드_앱_취약점_점검/check_package_Activity.png" | absolute_url}})
+![아나콘다테스트]({{"/assets/postImage/2018-07-22-텐서플로우 설치(윈도우10)/20180723_232558.png" | absolute_url}})
 
 
 **실습 환경**
@@ -71,8 +72,6 @@ run app.activity.info -a "com.android.insecurebankv2"
 run app.activity.start --component com.android.inescurebankv2 com.android.insecurebankv2.ChangePassword
 ```
 
-=======
-
 ![취약한 액티비티]({{/assets/postImage/2018-12-20-안드로이드_앱_취약점_점검/drozer_check_activity.png | relative_url}})
 
 액티비티 실행
@@ -81,7 +80,6 @@ run app.activity.start --component com.android.inescurebankv2 com.android.insecu
 run app.activity.start --component com.android.inescurebankv2 com.android.insecurebankv2.ChangePassword
 ```
 
->>>>>>> 454fa904f7460c4ea60b5f48724f606583abffd2
 ![액티비티 실행]({{/assets/postImage/2018-12-20-안드로이드_앱_취약점_점검/Screenshot_1545402785.png | relative_url}})
 
 
@@ -92,9 +90,6 @@ run app.activity.start --component com.android.inescurebankv2 com.android.insecu
 ![not_rooting]({{/assets/postImage/2018-12-20-안드로이드_앱_취약점_점검/non_rooting_device.png | relative_url}})
 exported옵션을 false로 한 앱을 액티비티 매니저로 실행시키면 false가 발생하지만 같은 앱을 루팅된 디바이스에서 액티비티 매니저로 액티비티 실행을 명령하면 실행이 된다.
 ![rooting]({{/assets/postImage/2018-12-20-안드로이드_앱_취약점_점검/rooting_devices.png | relative_url}})
-<<<<<<< HEAD
-=======
 
 
 앱 취약점을 공부를 해보면 루팅
->>>>>>> 454fa904f7460c4ea60b5f48724f606583abffd2
