--- a/_posts/2018-12-20-안드로이드_앱_취약점_점검_(1)_액티비티.md
+++ b/_posts/2018-12-20-안드로이드_앱_취약점_점검_(1)_액티비티.md
@@ -22,8 +22,9 @@ published : true
 액티비티 취약점을 실습하기 위해 InseureBank앱을 사용하기로 한다. [Android-InsecureBankv2](https://github.com/dineshshetty/Android-InsecureBankv2)에 있는 소스를 이용하였다. **Thank you InseureBank!!!**
 
 classyShark를 이용해 앱의 패키지경로 및 액티비티명을 알아내는 것이 초석이다.
-![activity]({{"/assets/postImage/2018-12-20-안드로이드_앱_취약점_점검/check_package_Activity.png" | absolute_url}})
-![아나콘다테스트]({{"/assets/postImage/2018-07-22-텐서플로우 설치(윈도우10)/20180723_232558.png" | absolute_url}})
+
+![activity]({{"/assets/postImage/2018-12-20-안드로이드_앱_취약점_점검_액티비티/check_package_Activity.png" | absolute_url}})
+
 
 
 **실습 환경**
@@ -61,18 +62,9 @@ run app.package.attacksurface com.android.insecurebankv2
 run app.activity.info -a "com.android.insecurebankv2"
 ```
 
-![앱 취약점 점검]({{/assets/postImage/2018-12-20-안드로이드_앱_취약점_점검/drozer_check_attacksurface.png | relative_url}})
-<<<<<<< HEAD
+![앱 취약점 점검]({{"/assets/postImage/2018-12-20-안드로이드_앱_취약점_점검_액티비티/drozer_check_attacksurface.png" | relative_url}})
 
-![취약한 액티비티]({{/assets/postImage/2018-12-20-안드로이드_앱_취약점_점검/drozer_check_activity.png | relative_url}})
-
-액티비티 실행
-
-```bat
-run app.activity.start --component com.android.inescurebankv2 com.android.insecurebankv2.ChangePassword
-```
-
-![취약한 액티비티]({{/assets/postImage/2018-12-20-안드로이드_앱_취약점_점검/drozer_check_activity.png | relative_url}})
+![취약한 액티비티]({{"/assets/postImage/2018-12-20-안드로이드_앱_취약점_점검_액티비티/drozer_check_activity.png" | relative_url}})
 
 액티비티 실행
 
@@ -80,16 +72,24 @@ run app.activity.start --component com.android.inescurebankv2 com.android.insecu
 run app.activity.start --component com.android.inescurebankv2 com.android.insecurebankv2.ChangePassword
 ```
 
-![액티비티 실행]({{/assets/postImage/2018-12-20-안드로이드_앱_취약점_점검/Screenshot_1545402785.png | relative_url}})
+![취약한 액티비티]({{/assets/postImage/2018-12-20-안드로이드_앱_취약점_점검_액티비티/drozer_check_activity.png | relative_url}})
+
+액티비티 실행
+
+```bat
+run app.activity.start --component com.android.inescurebankv2 com.android.insecurebankv2.ChangePassword
+```
+
+![액티비티 실행]({{/assets/postImage/2018-12-20-안드로이드_앱_취약점_점검_액티비티/Screenshot_1545402785.png | relative_url}})
 
 
 ## 취약점 진단
 매니페스트 파일을 보고 액티비티의 exported옵션이 true인 것인지를 확인한다. exported 옵션은 외부에서 앱을 실행시키는 것을 허용하는 옵션이다.
-![취약점 점검]({{"/assets/postImage/2018-12-20-안드로이드_앱_취약점_점검/activity_vulearability.png" | relative_url}})
+![취약점 점검]({{"/assets/postImage/2018-12-20-안드로이드_앱_취약점_점검_액티비티/activity_vulearability.png" | relative_url}})
 루팅 체크여부도 취약점 진단에 포함되어야 한다. exported옵션이 false이어도 액티비티 매니저를 이용하면 exported옵션을 무시하노 액티비티를 실행시킨다.
-![not_rooting]({{/assets/postImage/2018-12-20-안드로이드_앱_취약점_점검/non_rooting_device.png | relative_url}})
+![not_rooting]({{"/assets/postImage/2018-12-20-안드로이드_앱_취약점_점검_액티비티/non_rooting_device.png" | relative_url}})
 exported옵션을 false로 한 앱을 액티비티 매니저로 실행시키면 false가 발생하지만 같은 앱을 루팅된 디바이스에서 액티비티 매니저로 액티비티 실행을 명령하면 실행이 된다.
-![rooting]({{/assets/postImage/2018-12-20-안드로이드_앱_취약점_점검/rooting_devices.png | relative_url}})
+![rooting]({{"/assets/postImage/2018-12-20-안드로이드_앱_취약점_점검_액티비티/rooting_devices.png" | relative_url}})
 
 
 앱 취약점을 공부를 해보면 루팅
