--- a/_posts/2018-12-20-안드로이드_앱_취약점_점검_(1)_액티비티.md
+++ b/_posts/2018-12-20-안드로이드_앱_취약점_점검_(1)_액티비티.md
@@ -72,7 +72,7 @@ run app.activity.info -a "com.android.insecurebankv2"
 run app.activity.start --component com.android.inescurebankv2 com.android.insecurebankv2.ChangePassword
 ```
 
-![취약한 액티비티]({{/assets/postImage/2018-12-20-안드로이드_앱_취약점_점검_액티비티/drozer_check_activity.png | relative_url}})
+![취약한 액티비티]({{"/assets/postImage/2018-12-20-안드로이드_앱_취약점_점검_액티비티/drozer_check_activity.png" | relative_url}})
 
 액티비티 실행
 
@@ -80,7 +80,7 @@ run app.activity.start --component com.android.inescurebankv2 com.android.insecu
 run app.activity.start --component com.android.inescurebankv2 com.android.insecurebankv2.ChangePassword
 ```
 
-![액티비티 실행]({{/assets/postImage/2018-12-20-안드로이드_앱_취약점_점검_액티비티/Screenshot_1545402785.png | relative_url}})
+![액티비티 실행]({{"/assets/postImage/2018-12-20-안드로이드_앱_취약점_점검_액티비티/Screenshot_1545402785.png" | relative_url}})
 
 
 ## 취약점 진단
@@ -89,7 +89,4 @@ run app.activity.start --component com.android.inescurebankv2 com.android.insecu
 루팅 체크여부도 취약점 진단에 포함되어야 한다. exported옵션이 false이어도 액티비티 매니저를 이용하면 exported옵션을 무시하노 액티비티를 실행시킨다.
 ![not_rooting]({{"/assets/postImage/2018-12-20-안드로이드_앱_취약점_점검_액티비티/non_rooting_device.png" | relative_url}})
 exported옵션을 false로 한 앱을 액티비티 매니저로 실행시키면 false가 발생하지만 같은 앱을 루팅된 디바이스에서 액티비티 매니저로 액티비티 실행을 명령하면 실행이 된다.
-![rooting]({{"/assets/postImage/2018-12-20-안드로이드_앱_취약점_점검_액티비티/rooting_devices.png" | relative_url}})
-
-
-앱 취약점을 공부를 해보면 루팅
+![rooting]({{"/assets/postImage/2018-12-20-안드로이드_앱_취약점_점검_액티비티/rooting_devices.png"}})
