--- a/_posts/2018-12-20-안드로이드_앱_취약점_점검_(1)_액티비티.md
+++ b/_posts/2018-12-20-안드로이드_앱_취약점_점검_(1)_액티비티.md
@@ -13,7 +13,7 @@ published : true
 # 액티비티
 액티비티란 사용자와 직접 맞닿아 있는 부분으로서 사용자의 이벤트를 받는다.
 자세한 내용은 필자가 예전에 쓴 블로그 참고
-![클릭](https://kychul98.tistory.com/38?category=768148)
+[클릭](https://kychul98.tistory.com/38?category=768148)
 
 ## 액티비티 취약점
 액티비티에서 나타나는 취약점은 접근할 수 없는 액티비티에 접근을 하여서 정보를 수정 및 변조를 진행시킬 수 있다.
@@ -23,7 +23,7 @@ published : true
 
 classyShark를 이용해 앱의 패키지경로 및 액티비티명을 알아내는 것이 초석이다.
 
-![activity]({{"/assets/postImage/2018-12-20-안드로이드_앱_취약점_점검_액티비티/check_package_Activity.png" | absolute_url}})
+![activity]({{"/assets/postImage/2018-12-20-안드로이드_앱_취약점_점검_액티비티/check_package_activity.png"}})
 
 
 
@@ -54,8 +54,10 @@ adb shell am start -a 패키지.액티비티
 
 ### 실습2. drozer
 두번째 방법은 드로저를 이용하는 방법이다.
-drozer은 안드로이드 동적 분석으로 사용되는 툴로서 앱에서 공격할 수 있는 곳을 체크하고 실행시킬 수 있다. 또한 프록시까지 가능한 매우 좋은 툴이다. 드로저 설치는 예전 블로그를 봐라
-```bat
+drozer은 안드로이드 동적 분석으로 사용되는 툴로서 앱에서 공격할 수 있는 곳을 체크하고 실행시킬 수 있다. 또한 프록시까지 가능한 매우 좋은 툴이다. 
+
+
+``` bat
 #앱 취약점 점검
 run app.package.attacksurface com.android.insecurebankv2
 #취약한 액티비티 리스트
