--- a/_posts/2018-12-20-안드로이드_앱_취약점_점검_(1)_액티비티.md
+++ b/_posts/2018-12-20-안드로이드_앱_취약점_점검_(1)_액티비티.md
@@ -23,12 +23,12 @@ published : true
 
 classyShark를 이용해 앱의 패키지경로 및 액티비티명을 알아내는 것이 초석이다.
 
-![activity]({{"/assets/postImage/2018-12-20-안드로이드_앱_취약점_점검_액티비티/check_package_activity.png"}})
+![activity]({{"/assets/postImage/2018-12-20-안드로이드_앱_취약점_점검_액티비티/check_package_Activity.png"}})
 
 
 
 **실습 환경**
-![안드로이드 버전]({{"/assets/postImage/2018-12-20-안드로이드_앱_취약점_점검/android_version.png" | relative_url}})
+![안드로이드 버전]({{"/assets/postImage/2018-12-20-안드로이드_앱_취약점_점검/android_version.png"}})
 배치파일
 ```bat
 @echo os버전
@@ -54,7 +54,7 @@ adb shell am start -a 패키지.액티비티
 
 ### 실습2. drozer
 두번째 방법은 드로저를 이용하는 방법이다.
-drozer은 안드로이드 동적 분석으로 사용되는 툴로서 앱에서 공격할 수 있는 곳을 체크하고 실행시킬 수 있다. 또한 프록시까지 가능한 매우 좋은 툴이다. 
+drozer은 안드로이드 동적 분석으로 사용되는 툴로서 앱에서 공격할 수 있는 곳을 체크하고 실행시킬 수 있다. 또한 프록시까지 가능한 매우 좋은 툴이다.
 
 
 ``` bat
