--- a/_posts/2018-08-14-(2)-클래스-.md
+++ b/_posts/2018-08-14-(2)-클래스-.md
@@ -17,7 +17,7 @@ comments: true
 코틀린의 클래스 작성은 기존의 자바와 비슷하다. 코틀린에서 클래스 작성의 차이점은 body를 작성하지 않아도 된다는 것이다.
 
 *바디가 있는 클래스*
-```
+``` kotlin
 class TestClass{
 
 }
@@ -25,14 +25,14 @@ class TestClass{
 
 *바디가 없는 클래스*
 
-```
+``` kotlin
 class TestClass
 ```
 
 ## 초기화 블록
 초기화 블록이란 생성자 이전에 호출되는 블록이다. 외부에서 입력하는 파라미터 없이 값을 초기화를 해야하는 상황에서 사용된다. 표현 방식은 다음과 같다.
 
-```
+``` kotlin
 class testClass{
 	init{
     	println("init")
