--- a/_posts/2018-12-20-안드로이드_앱_취약점_점검_(1)_액티비티.md
+++ b/_posts/2018-12-20-안드로이드_앱_취약점_점검_(1)_액티비티.md
@@ -64,7 +64,7 @@ run app.package.attacksurface com.android.insecurebankv2
 run app.activity.info -a "com.android.insecurebankv2"
 ```
 
-![앱 취약점 점검]({{"/assets/postImage/2018-12-20-안드로이드_앱_취약점_점검_액티비티/drozer_check_attacksurface.png" | relative_url}})
+![앱 취약점 점검]({{"/assets/postImage/2018-12-20-안드로이드_앱_취약점_점검_액티비티/drozer_check_attack_surface.png"}})
 
 ![취약한 액티비티]({{"/assets/postImage/2018-12-20-안드로이드_앱_취약점_점검_액티비티/drozer_check_activity.png" | relative_url}})
 
@@ -73,8 +73,6 @@ run app.activity.info -a "com.android.insecurebankv2"
 ```
 run app.activity.start --component com.android.inescurebankv2 com.android.insecurebankv2.ChangePassword
 ```
-
-![취약한 액티비티]({{"/assets/postImage/2018-12-20-안드로이드_앱_취약점_점검_액티비티/drozer_check_activity.png" | relative_url}})
 
 액티비티 실행
 
@@ -88,7 +86,7 @@ run app.activity.start --component com.android.inescurebankv2 com.android.insecu
 ## 취약점 진단
 매니페스트 파일을 보고 액티비티의 exported옵션이 true인 것인지를 확인한다. exported 옵션은 외부에서 앱을 실행시키는 것을 허용하는 옵션이다.
 ![취약점 점검]({{"/assets/postImage/2018-12-20-안드로이드_앱_취약점_점검_액티비티/activity_vulearability.png" | relative_url}})
-루팅 체크여부도 취약점 진단에 포함되어야 한다. exported옵션이 false이어도 액티비티 매니저를 이용하면 exported옵션을 무시하노 액티비티를 실행시킨다.
+루팅 체크여부도 취약점 진단에 포함되어야 한다. exported옵션이 false이어도 액티비티 매니저를 이용하면 exported옵션을 무시하고 액티비티를 실행시킨다.
 ![not_rooting]({{"/assets/postImage/2018-12-20-안드로이드_앱_취약점_점검_액티비티/non_rooting_device.png" | relative_url}})
 exported옵션을 false로 한 앱을 액티비티 매니저로 실행시키면 false가 발생하지만 같은 앱을 루팅된 디바이스에서 액티비티 매니저로 액티비티 실행을 명령하면 실행이 된다.
 ![rooting]({{"/assets/postImage/2018-12-20-안드로이드_앱_취약점_점검_액티비티/rooting_devices.png"}})
