--- a/_posts/2018-12-22-안드로이드_앱_취약점_로그.md
+++ b/_posts/2018-12-22-안드로이드_앱_취약점_로그.md
@@ -23,11 +23,11 @@ Log.d("tag","text")
 취약점 확인은 간단하다. 로그캣을 확인해 앱이 어떤 로그를 뿌리는 것인지를 확인한다.
 근데 단순히 adb logcat을 이용해 로그를 출력시키면 로그가 너무 많이 나온다. 왜냐하면 로그라는 것이 점검할 앱에서만 나오는 것이 아니기 때문이다. 그러므로 필터를 걸어줘야 한다.
 
-![server]({{/assets/postImage/2018-12-22-안드로이드_앱_취약점_로그/server.png}})
+![server]({{"/assets/postImage/2018-12-22-안드로이드_앱_취약점_로그/server.png"}})
 
 서버 로그에 로그인을 확인
 
-![logcat]({{/assets/postImage/2018-12-22-안드로이드_앱_취약점_로그/logcat.png}})
+![logcat]({{"/assets/postImage/2018-12-22-안드로이드_앱_취약점_로그/logcat.png"}})
 
 로그캣에서 로그인 정보가 출력
 
